--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
-      - name: Release
+      - name: tag
+        uses: npvinhsd/agent-changelog-action
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
