--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -12,6 +12,7 @@ jobs:
         with:
           repository: npvinhsd/center-test
           ref: develop
+          fetch-depth: 0
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
