--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -21,3 +21,4 @@ jobs:
         uses: "npvinhsd/agent-changelog-action@main"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CENTER_REPOSITORY: npvinhsd/center-test
