--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -22,3 +22,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CENTER_REPOSITORY: npvinhsd/center-test
+          CENTER_GITHUB_TOKEN: ${{ secrests.CENTER_GITHUB_TOKEN }}
